--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- header section start here  -->
     <header class="header">
         <div class="logoContent">
-            <a href="#" class="logo"><img src="images/logo.png" alt="100%"></a>
+            <a href="#" class="logo"><img src="images/logo.jpg" alt="100%"></a>
             <h2 class="logoName">Cake Season </h2>
         </div>
 
@@ -78,19 +78,19 @@
             <div class="list">
                 <div class="item" style="--position: 1"><img src="" alt=""></div>
                 <div class="item" style="--position: 2"><img src="" alt=""></div>
-                <div class="item" style="--position: 3"><img src="images/slider/slider2_1.png" alt=""></div>
-                <div class="item" style="--position: 4"><img src="images/slider/slider2_2.png" alt=""></div>
-                <div class="item" style="--position: 5"><img src="images/slider/slider2_3.png" alt=""></div>
-                <div class="item" style="--position: 6"><img src="images/slider/slider2_4.png" alt=""></div>
+                <div class="item" style="--position: 3"><img src="images/slider/slider2_1.jpg" alt=""></div>
+                <div class="item" style="--position: 4"><img src="images/slider/slider2_2.jpg" alt=""></div>
+                <div class="item" style="--position: 5"><img src="images/slider/slider2_3.jpg" alt=""></div>
+                <div class="item" style="--position: 6"><img src="images/slider/slider2_4.jpg" alt=""></div>
 		
 
                 <div class="item" style="--position: 7"><img src="" alt=""></div>
-                <div class="item" style="--position: 8"><img src="images/slider/slider2_5.png" alt=""></div>
-                <div class="item" style="--position: 9"><img src="images/slider/slider2_4.png" alt=""></div>
-                <div class="item" style="--position: 10"><img src="images/slider/slider2_2.png" alt=""></div>
-                <div class="item" style="--position: 11"><img src="images/slider/slider2_5.png" alt=""></div>
-		<div class="item" style="--position: 12"><img src="images/slider/slider2_9.png" alt=""></div>
-		<div class="item" style="--position: 13"><img src="images/slider/slider2_10.png" alt=""></div>
+                <div class="item" style="--position: 8"><img src="images/slider/slider2_5.jpg" alt=""></div>
+                <div class="item" style="--position: 9"><img src="images/slider/slider2_4.jpg" alt=""></div>
+                <div class="item" style="--position: 10"><img src="images/slider/slider2_2.jpg" alt=""></div>
+                <div class="item" style="--position: 11"><img src="images/slider/slider2_5.jpg" alt=""></div>
+		<div class="item" style="--position: 12"><img src="images/slider/slider2_9.jpg" alt=""></div>
+		<div class="item" style="--position: 13"><img src="images/slider/slider2_10.jpg" alt=""></div>
 		<div class="item" style="--position: 14"><img src="" alt=""></div>
             </div>
         </div>
@@ -110,7 +110,7 @@
             <div class="swiper-wrapper">
                 <div class=" swiper-slide box">
                     <div class="img">
-                        <img src="images/redvel3.png" alt="">
+                        <img src="images/redvel3.jpg" alt="">
                     </div>
                     <div class="content">
                         <h3>About our Cake Season </h3>
